fixed formatting issue of button by removing pre-wrap from row style

--- a/docs/style.css
+++ b/docs/style.css
@@ -31,7 +31,7 @@ textarea{
 }
 
 .row {
-  white-space: pre-wrap;
+  /*(white-space: pre-wrap; removed pre-wrap to help center buttons*/
   height: 80px;
   border-top: 1px solid white;;
 }
